trying to fix an issue with subinfo on firefox

--- a/src/COMPONENTS/upcomingEventsPage/upcomingEvents.module.scss
+++ b/src/COMPONENTS/upcomingEventsPage/upcomingEvents.module.scss
@@ -178,31 +178,18 @@
 
 .eventImage {
   position: relative;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-bottom: none;
-
   height: 400px;
-
-  overflow: hidden;
-
   overflow: hidden;
 
   border-radius: var(--eventContainerRadius);
 
   .coverPhoto {
     object-fit: cover;
-    height: 400px;
+    height: 100%;
     width: 100%;
-    transition: all 0.2s ease;
+    display: block;
 
-    border-bottom: none;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    transition: filter 0.2s ease;
   }
 
   .coverPhotoFaded {
